--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -9,11 +9,11 @@
     "    \n",
     "### <font color='navy'> Simulación de procesos financieros. \n",
     "\n",
-    "**Nombres:** Navarro Silva José Tonatiuh, Muñoz Pablo Humberto, Rodríguez Ana.\n",
+    "**Nombres:** Navarro Silva José Tonatiuh, Muñoz Pablo Humberto, Rodríguez Rodríguez Ana Esmeralda.\n",
     "\n",
     "**Fecha:** 24 de Junio del 2021\n",
     "\n",
-    "**Expediente** : 722399,   ,\n",
+    "**Expediente** : 722399,   , 709288\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/if722399/Proyecto-SPF\n",
@@ -36,38 +36,259 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "## 1. Entregable.\n",
-    "Los trabajos deben tener los siguientes componentes básicos.\n",
-    "\n",
-    "### 1.1 Título del trabajo.\n",
-    "> Debe describir el trabajo.\n",
-    "\n",
+    "### 1.1 Título\n",
+    "## Clientes óptimos para tarjetas de crédito"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.2 Objetivos.\n",
-    "> - Se refieren a los propósitos por los cuales se hace el trabajo.\n",
-    "> - Deben ser **concretos, evaluables y verificables.**\n",
-    "> - Deben ser escritos en infinitivo.\n",
     "> #### 1.1 Objetivo general.\n",
-    ">  - Fin último de estudio. Se formula atendiendo el propósito global del trabajo. No presenta detalles.\n",
-    ">  - Se orienta a la totalidad del trabajo. Tiene que ver con el título del trabajo.\n",
-    "> #### 1.2 Objetivos específicos\n",
-    ">  - De forma detallada describen cada una de los componentes del trabajo.\n",
-    ">  - En conjunto garantizan la consecución del objetivo general.\n",
+    ">  -  Predecir cuales son los tipos de usuarios más óptimos en el uso de tarjetas de crédito\n",
     "\n",
-    "Referencia:\n",
-    "- https://es.slideshare.net/rosbur/metodologia-objetivos-generales-y-especficos\n",
-    "\n",
+    "> #### 1.2 Objetivos específicos.  \n",
+    ">  - Analizar la base de datos de usuarios que usan tarjetas de crédito\n",
+    ">  - Proponer categorías que se consideran importantes para obtener al mejor usuario.\n",
+    ">  - Simular la relación que tienen dichas categorías con el mejor usuario.\n",
+    ">  - Encontrar a los clientes óptimos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.3 Definición del problema.\n",
-    "> Se debe describir en una cuartilla máximo cuál es el escenario de negocio que se va a modelar, identificar cuáles son los supuestos que defines en el negocio y cuáles son los \"nodos\" o \"escenarios\" que identificas necesarios simular y porqué. Debes elaborar un diagrama de inicio a fin, identificando los \"nodos\" o \"escenarios\" a simular.\n",
     "\n",
+    "Resulta crucial para las empresas crediticias realizar un chequeo de sus clientes potenciales antes de relacionarse con ellos, por eso mismo con la intención de minimizar los riesgos para quienes ofrecen líneas de crédito nace este proyecto que permitirá calificar a los clientes a partir de puntos relevantes para la empresa. \n",
+    "\n",
+    "De esta forma la empresa crediticia podrá tener un mejor control de sus créditos y los clientes podrán disponer de mejores líneas de crédito ya que se han considerado como un cliente no problemático.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aqui va el diagrama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.4 Nodos y variables que se decidieron simular y porqué\n",
-    "> En este apartado el objetivo es identificar los problemas que se van a abordar, para examinar la factibilidad y viabilidad de la simulación de los nodos escogidos. Posteriormente se debe de argumentar del porqué de los nodos escogidos.\n",
     "\n",
+    "- Probabilidad de mejor uso por su edad: La edad nos dice mucho sobre el uso de crédito de una persona, la diferencia generacional puede influir en cómo administran el crédito y su conocimiento de uso. \n",
+    "- Probabilidad de mejor uso por nivel de educación: Creemos que el nivel de educación podría tener una relación importante con los ingresos de los usuarios.\n",
+    "- Probabilidad de mejor uso por sus ingresos: Consideramos que la cantidad de dinero que uno recibe tiene un gran impacto en la facilidad de pago.\n",
+    "- Probabilidad de mejor uso por la dependencia de personas: Contemplamos que muchas veces el crédito adquirido es usado de forma diferente dependiendo de cuántas personas dependen del usuario."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.5 Definición de hipótesis y supuestos.\n",
-    ">  Para poder modelar un proceso de negocio o cualquiera otro proceso en el área de las ingenierías o ciencias sociales, después de identificar el objeto de estudio, es importante indicar cuales son los supuestos que se dan por verdaderos a lo largo de la ejecución del proceso. Estos supuestos se deben indicar en forma de variables e hipótesis (son diferentes), porque si puedes definir en un valor el supuesto lo llamaremos \"supuesto constante\" y si no es posible identificarlo con un número entonces será una hipótesis que afectará la construcción de los escenarios posibles del proceso.\n",
     "\n",
+    "Objeto de estudio: \n",
+    "Usuario de tarjetas de crédito\n",
+    "\n",
+    "Hipótesis:\n",
+    "\n",
+    "- Los usuarios de los que dependen más personas hacen un uso mayor al crédito.\n",
+    "- Los usuarios arriba de 30 años tienen más estabilidad y facilidad de pago\n",
+    "- Los usuarios con un nivel de educación superior hacen mejor uso del crédito\n",
+    "- Los usuarios con mayor ingresos obtienen mejor limite de credito\n",
+    "\n",
+    "Supuestos: \n",
+    "\n",
+    "- El número de dependientes del cliente no aumentará\n",
+    "- La gente no perderá su empleo durante el tiempo del crédito\n",
+    "- La información recibida es verídica  \n",
+    "- Las variables que simularemos son las más significativas al uso de crédito"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.6 Obtención de bases de datos\n",
-    "> El tercer paso del proyecto es indicar de dónde se obtendrán las bases de datos, que indican como se han comportado las variables que identificaste en tu proceso de negocio que vas a simular. En esta investigación debes haber encontrado información propia de la empresa, organización o institución que vas a simular y otra parte de la información debe provenir de investigación que realices en fuentes de información públicas o privadas como las que tiene SECOBI, ahí normalmente y dependiendo del problema elegido, se investigan variables económicas, como tasas de interés, inflación, tipo de cambio, etc., de varios años, por poner un ejemplo.\n",
+    "\n",
+    "La base de datos se obtuvo del siguiente enlace: https://leaps.analyttica.com/home. Este sitio fue creado para aprender, aplicar y resolver problemas de empresas, en este caso, bancarias a través del uso de ciencia de datos.\n",
+    "La base de datos muestra un listado de clientes generados con el nivel de escolaridad del cliente, así como su ingreso anual, el número de personas a su cargo, su edad y el tiempo de relación con el banco.\n",
+    "\n",
+    "Esta misma base de datos puede ser encontrada en kaggle en el siguiente enlace: https://www.kaggle.com/sakshigoyal7/credit-card-customers "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Librerias\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_Age</th>\n",
+       "      <th>Dependent_count</th>\n",
+       "      <th>Education_Level</th>\n",
+       "      <th>Income_Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>$60K - $80K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>51</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>$80K - $120K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Uneducated</td>\n",
+       "      <td>$60K - $80K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10122</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10123</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10124</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10125</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>$40K - $60K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10126</td>\n",
+       "      <td>43</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Less than $40K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10127 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Customer_Age Dependent_count Education_Level Income_Category\n",
+       "0               45               3     High School     $60K - $80K\n",
+       "1               49               5        Graduate  Less than $40K\n",
+       "2               51               3        Graduate    $80K - $120K\n",
+       "3               40               4     High School  Less than $40K\n",
+       "4               40               3      Uneducated     $60K - $80K\n",
+       "...            ...             ...             ...             ...\n",
+       "10122           50               2        Graduate     $40K - $60K\n",
+       "10123           41               2         Unknown     $40K - $60K\n",
+       "10124           44               1     High School  Less than $40K\n",
+       "10125           30               2        Graduate     $40K - $60K\n",
+       "10126           43               2        Graduate  Less than $40K\n",
+       "\n",
+       "[10127 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('BankChurners.csv')\n",
+    "\n",
+    "clean_data = pd.DataFrame()\n",
+    "# Filtrar las variables a analizar\n",
+    "clean_data['Customer_Age'] = data.T.loc['Customer_Age']\n",
+    "clean_data['Dependent_count'] = data.T.loc['Dependent_count']\n",
+    "clean_data['Education_Level'] = data.T.loc['Education_Level']\n",
+    "clean_data['Income_Category'] = data.T.loc['Income_Category']\n",
+    "\n",
+    "clean_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 1.7 Visualización de resultados de simulación.\n",
     "> Se deben simular al menos 4  \"nodos\" o \"escenarios\" en tu problema. Para la segunda entrega debes haber elaborado un programa que simule dos de ellos, los primeros dos de tu diagrama.\n",
@@ -136,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
