--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "### 1.1 Título\n",
-    "## Clientes óptimos para tarjetas de crédito"
+    "## Proyección de venta de autos"
    ]
   },
   {
@@ -46,13 +46,13 @@
    "source": [
     "### 1.2 Objetivos.\n",
     "> #### 1.1 Objetivo general.\n",
-    ">  -  Predecir cuales son los tipos de usuarios más óptimos en el uso de tarjetas de crédito\n",
+    ">  - Predecir el comportamiento de la venta de autos\n",
     "\n",
     "> #### 1.2 Objetivos específicos.  \n",
-    ">  - Analizar la base de datos de usuarios que usan tarjetas de crédito\n",
-    ">  - Proponer categorías que se consideran importantes para obtener al mejor usuario.\n",
-    ">  - Simular la relación que tienen dichas categorías con el mejor usuario.\n",
-    ">  - Encontrar a los clientes óptimos"
+    ">  - Estimar el precio promedio dependiendo el tipo de carro \n",
+    ">  - Estudiar como se comportan las ventas de autos\n",
+    ">  - Simular el estilo de auto más vendido\n",
+    ">  - Encontrar el modelo de auto más vendible"
    ]
   },
   {
@@ -60,10 +60,16 @@
    "metadata": {},
    "source": [
     "### 1.3 Definición del problema.\n",
+    " \n",
+    "Vivimos en una ciudad donde la infraestructura está diseñada para el uso del carro. México es un país que se ha desarrollado en la industria del ensamblaje y producción de automoviles, siendo Estados Unidos uno de nuestros aliados comerciales más importantes, sin embargo existe la oportunidad de encontrar marcas de autos internacionales.\n",
     "\n",
-    "Resulta crucial para las empresas crediticias realizar un chequeo de sus clientes potenciales antes de relacionarse con ellos, por eso mismo con la intención de minimizar los riesgos para quienes ofrecen líneas de crédito nace este proyecto que permitirá calificar a los clientes a partir de puntos relevantes para la empresa. \n",
+    "Buscamos proyectar las ventas de autos, ya sean eléctricos, híbridos y de diesel, además de decidir si las emisiones de $CO_2$ de cada modelo afecta su rendimiento en ventas.\n",
     "\n",
-    "De esta forma la empresa crediticia podrá tener un mejor control de sus créditos y los clientes podrán disponer de mejores líneas de crédito ya que se han considerado como un cliente no problemático.\n"
+    "Nuestro propósito con este proyecto es analizar la base de datos, obtener su función de probabilidad, simular y dar una opinión informada a algún inversionista.\n",
+    "\n",
+    "Se utilizarán las siguientes variables: Emisiones totales de $CO_2$, ventas de vehículos que usan diesel, ventas de vehículos que son híbridos, ventas de vehículos que son eléctricos.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -84,10 +90,22 @@
    "source": [
     "### 1.4 Nodos y variables que se decidieron simular y porqué\n",
     "\n",
-    "- Probabilidad de mejor uso por su edad: La edad nos dice mucho sobre el uso de crédito de una persona, la diferencia generacional puede influir en cómo administran el crédito y su conocimiento de uso. \n",
-    "- Probabilidad de mejor uso por nivel de educación: Creemos que el nivel de educación podría tener una relación importante con los ingresos de los usuarios.\n",
-    "- Probabilidad de mejor uso por sus ingresos: Consideramos que la cantidad de dinero que uno recibe tiene un gran impacto en la facilidad de pago.\n",
-    "- Probabilidad de mejor uso por la dependencia de personas: Contemplamos que muchas veces el crédito adquirido es usado de forma diferente dependiendo de cuántas personas dependen del usuario."
+    "Los nodos que se han elegido para este proyecto es: \n",
+    "\n",
+    ">- Total de emisiones de $CO_2$\n",
+    ">- Total de ventas de autos que usan Diesel\n",
+    ">- Total de ventas de autos eléctricos\n",
+    ">- Total de ventas de autos híbridos\n",
+    "\n",
+    "Se simula el total de emisiones para analizar como afecta el volumen de ventas por auto. Lo que esperamos son las ventas de autos en los próximos meses.\n",
+    "\n",
+    "Al simular la Ventas de autos que usan Diesel podremos analizar los patrones en su venta.\n",
+    "\n",
+    "El total de ventas de autos eléctricos nos dejará conocer la relacción en los aumentos de ventas de esta variable y la disminución de ventas de otro tipo de auto.\n",
+    "\n",
+    "El total de ventas de autos híbridos permitirá determinar si las emisiones de gas tienen un incremento en la venta de este auto.\n",
+    "\n",
+    "Al finalizar la simulación se podrán elegir los autos que presentan una mayor posibilidad de ventas para un inversionista."
    ]
   },
   {
@@ -95,7 +113,7 @@
    "metadata": {},
    "source": [
     "### 1.5 Definición de hipótesis y supuestos.\n",
-    "\n",
+    "# CAMBIAR\n",
     "Objeto de estudio: \n",
     "Usuario de tarjetas de crédito\n",
     "\n",
