--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Fecha:** 24 de Junio del 2021\n",
     "\n",
-    "**Expediente** : 722399,   , 709288\n",
+    "**Expediente** : 722399, 719963 , 709288\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/if722399/Proyecto-SPF\n",
@@ -25,19 +25,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: right; margin: 0px 0px 15px 15px;\" src=\"https://upload.wikimedia.org/wikipedia/commons/b/b6/Proyecto_en_construccion.jpg\" width=\"300px\" height=\"100px\" />\n",
-    "\n",
-    "\n",
-    "# Proyecto Módulo 2- Guía.\n",
-    "> Se especifican los componentes básicos que deberá tener cada proyecto. El proyecto debe ser un problema que utilice datos reales, ya sea de una empresa física real o de alguna página de internet que proporcione bases de datos confiables. Con la información obtenida, se pretende utilizar todas las herramientas vistas durante el curso para la correcta modelación y simulación del cierto problema con ciertas variables de interés."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.1 Título\n",
-    "## Proyección de venta de autos"
+    "## Niveles de CO2 emitidos por autos vendidos"
    ]
   },
   {
@@ -46,13 +35,13 @@
    "source": [
     "### 1.2 Objetivos.\n",
     "> #### 1.1 Objetivo general.\n",
-    ">  - Pronosticar el promedio de los niveles de CO2 en relación con lo que producen los autos vendidos\n",
+    ">  - Pronosticar el promedio de los niveles de CO2 en relación con los autos vendidos\n",
     "\n",
     "> #### 1.2 Objetivos específicos.  \n",
-    ">  - Proyectar el precio promedio dependiendo el tipo de carro \n",
-    ">  - Estudiar como se comportan las ventas de autos\n",
-    ">  - Simular el estilo de auto más vendido\n",
-    ">  - Encontrar el modelo de auto más vendible"
+    ">  - Proyectar el volúmen de ventas dependiendo el tipo de carro.\n",
+    ">  - Simular el comportamiento de las ventas totales.\n",
+    ">  - Estimar el cambio en la cantidad de CO2 a partir de los autos vendidos. \n",
+    ">  - Analizar de forma gráfica las emisiones de C02 y los autos vendidos."
    ]
   },
   {
@@ -61,13 +50,12 @@
    "source": [
     "### 1.3 Definición del problema.\n",
     " \n",
-    "Vivimos en una ciudad donde la infraestructura está diseñada para el uso del carro. México es un país que se ha desarrollado en la industria del ensamblaje y producción de automoviles, siendo Estados Unidos uno de nuestros aliados comerciales más importantes, sin embargo existe la oportunidad de encontrar marcas de autos internacionales.\n",
+    "Vivimos en una ciudad donde la infraestructura está diseñada para el uso del carro. México es un país que se ha desarrollado en la industria del ensamblaje y producción de automoviles, siendo Estados Unidos uno de nuestros aliados comerciales más importantes, sin embargo existe la oportunidad de encontrar marcas de autos internacionales. Buscamos simular el impacto que tienen las ventas de autos, ya sean eléctricos, híbridos y de diesel en las emisiones de CO2.\n",
     "\n",
-    "Buscamos proyectar las ventas de autos, ya sean eléctricos, híbridos y de diesel, además de decidir si las emisiones de $CO_2$ de cada modelo afecta su rendimiento en ventas.\n",
     "\n",
-    "Nuestro propósito con este proyecto es analizar la base de datos, obtener su función de probabilidad, simular y dar una opinión informada a algún inversionista.\n",
+    "Nuestro propósito con este proyecto es analizar la base de datos, obtener las distribuciones de probabilidad de cada variable de interés y asi poder realizar una conclusión acerca de la relación que existe entre las ventas de los 3 tipos de autos y la emisión de CO2.\n",
     "\n",
-    "Se utilizarán las siguientes variables: Emisiones totales de $CO_2$, ventas de vehículos que usan diesel, ventas de vehículos que son híbridos, ventas de vehículos que son eléctricos.\n",
+    "Se utilizarán las siguientes variables: Promedio de $CO_2$, ventas de vehículos que usan diesel, ventas de vehículos que utilizan gasolina, ventas de vehículos que son híbridos, ventas de vehículos que son eléctricos.\n",
     "\n",
     "\n"
    ]
@@ -92,12 +80,12 @@
     "\n",
     "Los nodos que se han elegido para este proyecto es: \n",
     "\n",
-    ">- Total de emisiones de $CO_2$\n",
-    ">- Total de ventas de autos que usan Diesel\n",
-    ">- Total de ventas de autos eléctricos\n",
-    ">- Total de ventas de autos híbridos\n",
+    ">- Promedio de emisiones de $CO_2$ por mes.\n",
+    ">- Total de ventas de autos que usan Diesel.\n",
+    ">- Total de ventas de autos eléctricos.\n",
+    ">- Total de ventas de autos híbridos.\n",
     "\n",
-    "Se simula el total de emisiones para analizar como afecta el volumen de ventas por auto. Lo que esperamos son las ventas de autos en los próximos meses.\n",
+    "Se simula el volumen de ventas por auto para analizar como afecta el promedio de emisiones .\n",
     "\n",
     "Al simular la Ventas de autos que usan Diesel podremos analizar los patrones en su venta.\n",
     "\n",
@@ -113,23 +101,22 @@
    "metadata": {},
    "source": [
     "### 1.5 Definición de hipótesis y supuestos.\n",
-    "# CAMBIAR\n",
-    "Objeto de estudio: \n",
-    "Usuario de tarjetas de crédito\n",
+    "\n",
     "\n",
     "Hipótesis:\n",
     "\n",
-    "- Los usuarios de los que dependen más personas hacen un uso mayor al crédito.\n",
-    "- Los usuarios arriba de 30 años tienen más estabilidad y facilidad de pago\n",
-    "- Los usuarios con un nivel de educación superior hacen mejor uso del crédito\n",
-    "- Los usuarios con mayor ingresos obtienen mejor limite de credito\n",
+    "- El volúmen de las emisiones de CO2 está altamente correlacionado con las ventas del tipo de auto.\n",
+    "- La probabilidad de que el promedio de CO2 esté por debajo de 90 g/km es del 60% .\n",
+    "- El vehículo que utilza diesel es el que se vende en mayor cantidad.\n",
+    "- El volúmen de las emisiones de CO2 va incrementando a lo largo del tiempo.\n",
+    "\n",
     "\n",
     "Supuestos: \n",
     "\n",
-    "- El número de dependientes del cliente no aumentará\n",
-    "- La gente no perderá su empleo durante el tiempo del crédito\n",
-    "- La información recibida es verídica  \n",
-    "- Las variables que simularemos son las más significativas al uso de crédito"
+    "- Las emisiones de C02 no contemplan la producción de los vehículos.\n",
+    "- Los datos obtenidos son verídicos.\n",
+    "- El total de números de carros que utilizan gasolina se presenta como la diferencia entre total de ventas y las ventas de los 3 tipos de carros.\n",
+    "- Las unidades en las que se presenta la cantidad de CO2 es de g/km (gramos por kilómetro)."
    ]
   },
   {
@@ -138,10 +125,10 @@
    "source": [
     "### 1.6 Obtención de bases de datos\n",
     "\n",
-    "La base de datos se obtuvo del siguiente enlace: https://leaps.analyttica.com/home. Este sitio fue creado para aprender, aplicar y resolver problemas de empresas, en este caso, bancarias a través del uso de ciencia de datos.\n",
-    "La base de datos muestra un listado de clientes generados con el nivel de escolaridad del cliente, así como su ingreso anual, el número de personas a su cargo, su edad y el tiempo de relación con el banco.\n",
+    "La base de datos se obtuvo del siguiente enlace: https://www.kaggle.com/dmi3kno/newcarsalesnorway?select=norway_new_car_sales_by_month.csv, la cual se encuentra en el sitio de Kaggle, sitio web diseñado para proporcionar una gran catidad de data sets con propósitos académicos.\n",
     "\n",
-    "Esta misma base de datos puede ser encontrada en kaggle en el siguiente enlace: https://www.kaggle.com/sakshigoyal7/credit-card-customers "
+    "La base de datos nos proporciona variables de utilidad para poder pronosticar la cantidad de  \n",
+    "\n"
    ]
   },
   {
@@ -158,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -183,13 +170,17 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Month</th>\n",
+       "      <th>Quantity</th>\n",
        "      <th>Avg_CO2</th>\n",
        "      <th>Quantity_Diesel</th>\n",
        "      <th>Quantity_Hybrid</th>\n",
        "      <th>Quantity_Electric</th>\n",
+       "      <th>Quantity_Bensin</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -199,117 +190,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>1</td>\n",
-       "      <td>152</td>\n",
-       "      <td>10072</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>2</td>\n",
-       "      <td>156</td>\n",
-       "      <td>7222</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>3</td>\n",
-       "      <td>159</td>\n",
-       "      <td>7965</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>4</td>\n",
-       "      <td>160</td>\n",
-       "      <td>6116</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>5</td>\n",
-       "      <td>160</td>\n",
-       "      <td>8519</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>9</td>\n",
+       "      <td>13854</td>\n",
        "      <td>88</td>\n",
        "      <td>3838</td>\n",
        "      <td>3991.0</td>\n",
        "      <td>2629.0</td>\n",
+       "      <td>3396.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>10</td>\n",
+       "      <td>11932</td>\n",
        "      <td>91</td>\n",
        "      <td>3544</td>\n",
        "      <td>3209.0</td>\n",
        "      <td>1861.0</td>\n",
+       "      <td>3318.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>11</td>\n",
+       "      <td>13194</td>\n",
        "      <td>88</td>\n",
        "      <td>3892</td>\n",
        "      <td>3181.0</td>\n",
        "      <td>2567.0</td>\n",
+       "      <td>3554.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>12</td>\n",
+       "      <td>13602</td>\n",
        "      <td>98</td>\n",
        "      <td>4829</td>\n",
        "      <td>2597.0</td>\n",
        "      <td>2319.0</td>\n",
+       "      <td>3857.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017</th>\n",
        "      <td>1</td>\n",
+       "      <td>13055</td>\n",
        "      <td>84</td>\n",
        "      <td>3433</td>\n",
        "      <td>4419.0</td>\n",
        "      <td>2295.0</td>\n",
+       "      <td>2908.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>121 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Month  Avg_CO2  Quantity_Diesel  Quantity_Hybrid  Quantity_Electric\n",
-       "Year                                                                     \n",
-       "2007      1      152            10072              0.0                0.0\n",
-       "2007      2      156             7222              0.0                0.0\n",
-       "2007      3      159             7965              0.0                0.0\n",
-       "2007      4      160             6116              0.0                0.0\n",
-       "2007      5      160             8519              0.0                0.0\n",
-       "...     ...      ...              ...              ...                ...\n",
-       "2016      9       88             3838           3991.0             2629.0\n",
-       "2016     10       91             3544           3209.0             1861.0\n",
-       "2016     11       88             3892           3181.0             2567.0\n",
-       "2016     12       98             4829           2597.0             2319.0\n",
-       "2017      1       84             3433           4419.0             2295.0\n",
+       "      Month  Quantity  Avg_CO2  Quantity_Diesel  Quantity_Hybrid  \\\n",
+       "Year                                                               \n",
+       "2016      9     13854       88             3838           3991.0   \n",
+       "2016     10     11932       91             3544           3209.0   \n",
+       "2016     11     13194       88             3892           3181.0   \n",
+       "2016     12     13602       98             4829           2597.0   \n",
+       "2017      1     13055       84             3433           4419.0   \n",
        "\n",
-       "[121 rows x 5 columns]"
+       "      Quantity_Electric  Quantity_Bensin  \n",
+       "Year                                      \n",
+       "2016             2629.0           3396.0  \n",
+       "2016             1861.0           3318.0  \n",
+       "2016             2567.0           3554.0  \n",
+       "2016             2319.0           3857.0  \n",
+       "2017             2295.0           2908.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,11 +271,12 @@
     "\n",
     "data = pd.read_csv('norway_new_car_sales_by_month.csv')\n",
     "\n",
-    "data = data.iloc[:,[0,1,8,11,14,15]]\n",
+    "data = data.iloc[:,[0,1,2,8,11,14,15]]\n",
     "data.set_index('Year', inplace=True)\n",
     "data.fillna(0, inplace = True)\n",
+    "data['Quantity_Bensin'] = data['Quantity']- data['Quantity_Diesel'] - data['Quantity_Hybrid'] - data['Quantity_Electric']\n",
     "\n",
-    "data"
+    "data.tail()"
    ]
   },
   {
