--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -2426,6 +2426,320 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# NODO 4 - ELECTRICOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "electrico = (data['Quantity_Electric'])\n",
+    "mindatos = np.min(electrico)\n",
+    "maxdatos = np.max(electrico)\n",
+    "\n",
+    "electrico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vemos el histograma por si solo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(10)\n",
+    "muestra_n2 = np.random.choice(electrico, 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,(ax1, ax2) = plt.subplots(2, 1, sharex = True, figsize=(16, 12))\n",
+    "sns.histplot(electrico, ax = ax2, bins = 30);\n",
+    "sns.boxplot(electrico, ax = ax1, saturation =.5, color = 'r');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizamos el histograma vs la función del KDE (sin reducción de varianzas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def acep_rechazo_simplificada(\n",
+    "    N:'Cantidad de variables a generar',\n",
+    "    Dom_f:'Dominio de la función f como tupla (a,b)',\n",
+    "    f:'función objetivo a generar',\n",
+    "    max_f:'máximo valor de f'):\n",
+    "    \n",
+    "    ''' Esta función aplica el método de aceptación y rechazo a una función de distribución para generar valores'''\n",
+    "    X = np.zeros(N)\n",
+    "    i=0\n",
+    "    while i<N:\n",
+    "        R2=np.random.uniform(0,max_f)\n",
+    "        R1=np.random.uniform(Dom_f[0], Dom_f[1])\n",
+    "\n",
+    "        if R2<= f(R1):\n",
+    "            X[i]=R1\n",
+    "            i+=1\n",
+    "\n",
+    "    return X\n",
+    "\n",
+    "#aplicar método de aceptación y rechazo para generar 10000 valores\n",
+    "generados_ar_columna1=acep_rechazo_simplificada(10000, (min(electrico), max(electrico)), pdf_columna1_gene, max(pdf_columna1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Las distribuciones que probaremos seran:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[d for d in dir(st) if isinstance(getattr(st, d), getattr(st, 'rv_continuous'))][0:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distr_opt_datosh = best_fit_distribution_1(electrico, 50)\n",
+    "print('La mejor distribución es:')\n",
+    "distr_opt_datosh[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probamos más distribuciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_list = [d for d in dir(st) if isinstance(getattr(st, d), getattr(st, 'rv_continuous'))][0:25]\n",
+    "dist_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distribuciones(electrico, dist_list, 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err.sort_values(by = 'MSE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = err.sort_values(by = 'MSE').head(3).index.values\n",
+    "best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qq(electrico, best[0]) \n",
+    "plt.title(best[0]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qq(electrico, best[1]) \n",
+    "plt.title(best[1]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qq(electrico, best[2]) \n",
+    "plt.title(best[2]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_r = electrico.mean()\n",
+    "sigma_r = electrico.std()\n",
+    "param = getattr(st, 'beta').fit(electrico)\n",
+    "mu_r, sigma_r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "J = 60\n",
+    "y, x, _ = plt.hist(muestra_n1, J, density=True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Se obvia el último valor de x para obtener exactamente J muestras de x\n",
+    "x = x[:-1] \n",
+    "\n",
+    "# Media y desviación estándar muestral\n",
+    "mu = np.mean(x)\n",
+    "sigma = np.std(x)\n",
+    "print('media mu = %f, desviación estándar muestral = %f'%(mu, sigma))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pi = st.beta.pdf(x, param[0], param[1], param[2], param[3])\n",
+    "\n",
+    "# Cálculo de la esperanza usando la expresión teórica\n",
+    "Ei = x*pi\n",
+    "\n",
+    "# Cálculo teórico de la chi cuadrada\n",
+    "x2 = np.sum(list(map(lambda Ei, obs_i:(obs_i - Ei)**2 / Ei, Ei, y)))\n",
+    "print('Valor de chi cuadrado teorico  = ', x2)\n",
+    "\n",
+    "# Cálculo usando la librería estadística de la chi cuadrada\n",
+    "X2 = st.chisquare(y, Ei)\n",
+    "print('Valor de chi cuadrado librería = ', X2)\n",
+    "\n",
+    "# Cálculo de Grados de libertad del estadístico\n",
+    "p = 4 # Parámetros estimados con los datos\n",
+    "m = J-p-1 # grados de libertad\n",
+    "\n",
+    "Chi_est = st.chi2.ppf(q=0.95, df=m)\n",
+    "print('Estadístico de chi_cuadrado = ', Chi_est)\n",
+    "print('Media muestral = ', mu, '\\nDesviación estándar muestral = ', sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h0 = ['$H_0$ = La PDF es {}'.format(dist) for dist in best]\n",
+    "h0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ha = ['$H_a$ = La PDF no es {}'.format(dist) for dist in best]\n",
+    "ha"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_kol_smir = [kol_smir_test(muestra_n1, dist) for dist in best]\n",
+    "top_kol_smir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_grid=np.linspace(min(electrico), max(electrico), 1000) #generamos el grid\n",
+    "pdf_columna1=kde_statsmodels_u(electrico, x_grid, bandwidth=0.2) #calculamos la pdf de los datos \n",
+    "f = kde_statsmodels_func(electrico) #obtener la función de distribución generada por el KDE\n",
+    "\n",
+    "\n",
+    "plot_vs_hist_density(generados_ar_columna1, 50, x_grid, pdf_columna1, 'Aceptación y rechazo', 'PDF KDE',\n",
+    "                    'Datos 1', 'Probabilidad', 'Método de acepatación y rechazo vs KDE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "V_A_10000 = R_V_Gen(f, xg, electrico, 10000, 4, 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 1.7 Visualización de resultados de simulación.\n",
     "> Se deben simular al menos 4  \"nodos\" o \"escenarios\" en tu problema. Para la segunda entrega debes haber elaborado un programa que simule dos de ellos, los primeros dos de tu diagrama.\n",
@@ -2475,7 +2789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
