--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -622,7 +622,7 @@
     "    \n",
     "def best_fit_distribution_1(data:'Datos de los que se va a encontrar la distribución', bins):\n",
     "    \n",
-    "    '''La siguiente función selecciona la mejor distribución para el conjunto de datos 2 (columna 2), \n",
+    "    '''La siguiente función selecciona la mejor distribución para el conjunto de datos, \n",
     "    las distribuciones fueron seleccionadas de acuerdo a la forma  del listado de distribuciones continuas de scipy'''\n",
     "    \n",
     "    [y, x]=np.histogram(data, bins=bins, density=True)\n",
@@ -1014,14 +1014,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para el primer nodo, nuestro propósito es crear un modelo que proyecte las ventas de los vehiculos que producen gasolina. Debido a que nuestra base de datos nos proporciona información de manera mensual, esperamos que nuestro modelo sea capaz de predecir las ventas del mes siguiente (02-2017)."
+    "**Para el primer nodo, nuestro propósito es crear un modelo que proyecte las ventas de los vehiculos que utilizan diesel. Debido a que nuestra base de datos nos proporciona información de manera mensual, esperamos que nuestro modelo sea capaz de predecir las ventas del mes siguiente (02-2017).**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El primer paso a realizar es calcular el kernel density estimation."
+    "*Lo primero que vamos a hacer es ver de manera visual, como están distribuidos los datos*\n",
+    "\n",
+    "- ##### A través de un histograma y un diagrama de cajas y bigotes"
    ]
   },
   {
@@ -1095,6 +1097,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- #### Ahora, buscamos encontrar una distribución que se asimile a los datos que tenemos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -1136,7 +1145,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1160,6 +1171,13 @@
     "distr_opt_datosh = best_fit_distribution_1(diesel, 50)\n",
     "print('La mejor distribución es:')\n",
     "distr_opt_datosh[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El resultado indica que dgamma es la que mejor distribuye, sin embargo evaluaremos algunas distribuciones adicionales y tomaremos las mejores 3"
    ]
   },
   {
@@ -1423,6 +1441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El resultado indica que dgamma es la que mejor distribuye, sin embargo evaluaremos algunas distribuciones adicionales y tomaremos las mejores 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1489,6 +1514,22 @@
    "source": [
     "qq(diesel, best[2]) \n",
     "plt.title(best[2]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Podemos una pequeña incongruencia en el medio de lagráfica, pero para saber si es lo suficientemente significativa para rechazar o aceptar nuestra hipótesis debemos realizar una prueba de $\\chi^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H_0: Los datos distribuyen \"argus\"$\n",
+    "\n",
+    "$H_a: Los datos no distribuyen \"Argus\"$"
    ]
   },
   {
@@ -1653,7 +1694,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1671,6 +1714,13 @@
    "source": [
     "top_kol_smir = [kol_smir_test(diesel, dist) for dist in best]\n",
     "top_kol_smir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Con los resultados podemos aceptar la hipótesis nula e que la PDF distribuye como \"Argus\""
    ]
   },
   {
@@ -1770,7 +1820,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NODO 2"
+    "### NODO 2\n",
+    "\n",
+    "# En este nodo se planea estudiar el comportamiento de los autos de gasolina, también conocidos como Bensin.\n",
+    "\n",
+    "### Comenzaremos con el estudio del histograma y el diagrama de caja y bigotes"
    ]
   },
   {
@@ -1844,13 +1898,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Calculamos la Funcion de distribución de probabilidad \n",
+    "\n",
+    "# Buscaremos las 3 mejores distribuciones que se ajustan a nuestros datos a partir de un método y otr distribución se dará apartir de una función diferente\n",
+    "\n",
+    "- ### Con estos vamos a realizar las pruebas de reducción de varianza\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'st' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-e66a58402277>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[0md\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mst\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mst\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rv_continuous'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdistr_opt_datosh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbest_fit_distribution_1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgas\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'st' is not defined"
+     ]
+    }
+   ],
    "source": [
     "[d for d in dir(st) if isinstance(getattr(st, d), getattr(st, 'rv_continuous'))][0:20]\n",
-    "distr_opt_datosh = best_fit_distribution_1(hibrido, 50)"
+    "distr_opt_datosh = best_fit_distribution_1(gas, 50)"
    ]
   },
   {
@@ -2121,6 +2198,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Las mejores 3 distribuciones son..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
@@ -2139,6 +2223,13 @@
    "source": [
     "best = err.sort_values(by = 'MSE').head(3).index.values\n",
     "best"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ahora nos toca probarlas en la prueba de Q-Q"
    ]
   },
   {
@@ -2208,6 +2299,13 @@
    "source": [
     "qq(gas, best[2]) \n",
     "plt.title(best[2]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anglit parec ser la función más óptima"
    ]
   },
   {
@@ -2361,7 +2459,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2379,6 +2479,13 @@
    "source": [
     "top_kol_smir = [kol_smir_test(gas, dist) for dist in best]\n",
     "top_kol_smir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nos damos cuenta que \"anglit\" es la funcion que mejor se ajusta para nuestro proyecto"
    ]
   },
   {
