--- a/Proyecto Final.ipynb
+++ b/Proyecto Final.ipynb
@@ -2581,14 +2581,269 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -------------------- Media para MAR con MRV --------------------\n",
+    "mu_MAR_MRV = [np.mean(np.exp(V_A_10000)), np.mean(np.exp(V_A_1000)), np.mean(np.exp(V_A_100))]\n",
+    "mu_MAR_MRV"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# -------------------- Std para MAR con MRV --------------------\n",
+    "std_MAR_MRV = [np.std(np.exp(V_A_10000)), np.std(np.exp(V_A_1000)), np.std(np.exp(V_A_100))]\n",
+    "std_MAR_MRV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Media Real --------------------\n",
+    "real_mean_N2 = np.mean(np.exp(gas))\n",
+    "real_mean_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Std Real --------------------\n",
+    "real_std_N2 = np.std(np.exp(gas))\n",
+    "real_std_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Error Media de MAR con MRV --------------------\n",
+    "error_M_MAR_N2 = [error(real_mean_N2, mu_MAR_MRV[i]) for i in range(3)]\n",
+    "error_M_MAR_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Error Std de MAR con MRV --------------------\n",
+    "error_STD_MAR_N2 = [error(real_std_N2, std_MAR_MRV[i]) for i in range(3)]\n",
+    "error_STD_MAR_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# -------------------- Monte Carlo 10k --------------------\n",
+    "MC_10000 = np.array([Simple_MAR(f, max_f, xg, 10) for i in range(1000)])\n",
+    "MC_10000 = [np.exp(MC_10000[i]) for i in range(len(MC_10000))]\n",
+    "MC_10000 = np.concatenate(MC_10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# -------------------- Monte Carlo 1k --------------------\n",
+    "MC_1000 = np.array([Simple_MAR(f, max_f, xg, 10) for i in range(100)])\n",
+    "MC_1000 = [np.exp(MC_1000[i]) for i in range(len(MC_1000))]\n",
+    "MC_1000 = np.concatenate(MC_1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# -------------------- Monte Carlo 100 --------------------\n",
+    "MC_100 = np.array([Simple_MAR(f, max_f, xg, 10) for i in range(10)])\n",
+    "MC_100 = [np.exp(MC_100[i]) for i in range(len(MC_100))]\n",
+    "MC_100 = np.concatenate(MC_100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu_MC = [np.mean(MC_10000), np.mean(MC_1000), np.mean(MC_100)]\n",
+    "mu_MC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std_MC_MRV = [np.std(MC_10000), np.std(MC_1000), np.std(MC_100)]\n",
+    "std_MC_MRV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_M_MC_N2 = [error(real_mean_N2, mu_MC[i]) for i in range(3)]\n",
+    "error_M_MC_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_STD_MC_N2 = [error(real_std_N2, std_MC_MRV[i]) for i in range(3)]\n",
+    "error_STD_MC_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R_stats_N2 = np.round(np.exp(gas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Intervalo de confianza usando t-student\n",
+    "i1 = st.t.interval(.99, len(R_stats_N2)-1, loc=np.mean(R_stats_N2), scale=st.sem(R_stats_N2))\n",
+    "# Intervalo de confianza usando distribución normal\n",
+    "i2 = st.norm.interval(.99, loc=np.mean(R_stats_N2), scale=st.sem(R_stats_N2))\n",
+    "print('Con una confianza de %2.2f la media estará en el intervalo t,\\n %s     ' %(.99,i1))\n",
+    "print('Con una confianza de %2.2f la media estará en el intervalo normal,\\n %s' %(.99,i2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_N2 = pd.DataFrame(columns = ['Mean', 'Error %', 'std', 'Error %'])\n",
+    "res_N2.index.name = 'Método'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_N2.loc['MAR ME 10000'] = mu_MAR_MRV[0], error_M_MAR_N2[0], std_MAR_MRV[0], error_STD_MAR_N2[0]                     \n",
+    "res_N2.loc['MAR ME 1000'] = mu_MAR_MRV[1], error_M_MAR_N2[1], std_MAR_MRV[1], error_STD_MAR_N2[1]\n",
+    "res_N2.loc['MAR ME 100'] = mu_MAR_MRV[2], error_M_MAR_N2[2], std_MAR_MRV[2], error_STD_MAR_N2[2]\n",
+    "\n",
+    "res_N2.loc['Monte Carlo 10000'] = mu_MC[0], error_M_MC_N2[0], std_MC_MRV[0], error_STD_MC_N2[0]\n",
+    "res_N2.loc['Monte Carlo 1000'] = mu_MC[1], error_M_MC_N2[1], std_MC_MRV[1], error_STD_MC_N2[1]\n",
+    "res_N2.loc['Monte Carlo 100'] = mu_MC[2], error_M_MC_N2[2], std_MC_MRV[2], error_STD_MC_N2[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_N2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.round(R_stats_N2.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_N2_MAR = pd.Series(np.exp(V_A_10000))\n",
+    "np.round(stats_N2_MAR.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_MC = pd.Series(MC_10000)\n",
+    "np.round(stats_MC.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DescripcionN2 = pd.DataFrame(columns = ['Estadístico', 'Reales', 'MAR y Estratos', 'Monte Carlo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DescripcionN2['Estadístico'] = ['count', 'mean', 'std', 'min', '25%', '50%', '75%', 'max']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DescripcionN2['Reales'] = np.round(R_stats_N2.describe()).values\n",
+    "DescripcionN2['MAR y Estratos'] = np.round(stats_N2_MAR.describe()).values\n",
+    "DescripcionN2['Monte Carlo'] = np.round(stats_MC.describe()).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DescripcionN2"
+   ]
   },
   {
    "cell_type": "code",
@@ -4282,7 +4537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
